edit the web page

--- a/location.html
+++ b/location.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Get Current Location</title>
+    <title>Automatic Location Retrieval</title>
 </head>
 <body>
-    <h1>Your Current Location</h1>
-    <p id="location"></p>
-    <button onclick="getLocation()">Get Location</button>
+    <h1>Getting Your Location...</h1>
+    <p id="message">Please wait...</p>
 
     <script>
-        function getLocation() {
+        window.onload = function() {
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(sendLocation, handleError);
             } else {
-                document.getElementById("location").innerHTML = "Geolocation is not supported by this browser.";
+                document.getElementById("message").innerHTML = "Geolocation is not supported by this browser.";
             }
-        }
+        };
 
         function sendLocation(position) {
             let latitude = position.coords.latitude;
             let longitude = position.coords.longitude;
 
-            // Construct the URL with query parameters
-            let url = `https://iot.cpe.ku.ac.th/red/b6610545367/#flow/fccb7b1f315b0916?latitude=${latitude}&longitude=${longitude}`;
+            let locationData = {
+                latitude: latitude,
+                longitude: longitude
+            };
 
-            // Make an HTTP GET request
-            fetch(url)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-                    return response.text(); // or response.json() if your API returns JSON
-                })
-                .then(data => {
-                    document.getElementById("location").innerHTML = "Location sent to API: " + data; //display api response on the webpage
-                })
-                .catch(error => {
-                    document.getElementById("location").innerHTML = "Error sending location: " + error;
-                });
+            fetch("https://iot.cpe.ku.ac.th/red/b6610545367/location", {
+                method: "POST", // Use POST to send JSON data
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(locationData)
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                return response.text(); // or response.json() if your API returns JSON
+            })
+            .then(data => {
+                document.getElementById("message").innerHTML = "Location sent to API: " + data;
+            })
+            .catch(error => {
+                document.getElementById("message").innerHTML = "Error sending location: " + error;
+            });
         }
 
         function handleError(error) {
@@ -56,7 +62,7 @@
                     message = "An unknown error occurred.";
                     break;
             }
-            document.getElementById("location").innerHTML = message;
+            document.getElementById("message").innerHTML = message;
         }
     </script>
 </body>
