change the structure

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
                 navigator.geolocation.getCurrentPosition(position => {
                     const { latitude, longitude } = position.coords;
 
-                    fetch("http://localhost:5000/send-location", {
+                    fetch("https://heart-on-the-road.vercel.app/api/send-location", {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
                         body: JSON.stringify({ latitude, longitude })
